@YELP_HELP_RULES@

HELP_ID = rhythmbox
HELP_FILES = \
	_manage-tags.page \
	crossfade.page \
	index.page \
	intro.page \
	lastfm-manage.page \
	lastfm-signin.page \
	lastfm.page \
	legal.xml \
	music-import.page \
	overview.page \
	play-queue.page \
	playlists-automatic-create.page \
	playlists-automatic.page \
	playlists-save-to-file.page \
	playlists-standard-create.page \
	playlists-standard.page \
	playlists-type.page \
	playlists-what-is.page \
	podcast-add.page \
	podcast-change-check.page \
	podcast-change-download.page \
	podcast-listen.page \
	podcast.page \
	prob-playlist-empty.page \
	prob-resolve-host.page \
	prob-unable-connect.page \
	radio-stations-add.page \
	radio-stations-edit.page \
	radio-stations-listen.page \
	radio-stations.page \
	radio-what-is.page \
	rate-a-song.page \
	repeat-music.page \
	shortcut-keys.page \
	shortcut-lirc.page \
	volume-controls.page
HELP_MEDIA = \
	figures/rb-iradio-main.png		\
	figures/rb-notification-area-menu.png	\
	figures/rb-notification-window.png	\
	figures/rb-notification-zone.png	\
	figures/rb-podcast-main.png		\
	figures/rb-statusbar.png		\
	figures/rb-toolbar.png			\
	figures/rb-toolbar-prevplaynext.png	\
	figures/rb-toolbar-repeat.png		\
	figures/rb-toolbar-shuffle.png		\
	figures/rb-volume-changer.png		\
	figures/rb-window.png			\
	figures/rb-window-small.png
HELP_LINGUAS = cs da de es el eu fr gl it ja oc pt ro ru sl sv uk zh_CN
