@YELP_HELP_RULES@

HELP_ID = rhythmbox
HELP_FILES = fdl-appendix.xml index.docbook legal.xml
HELP_MEDIA = \
	figures/rb-iradio-main.png		\
	figures/rb-notification-area-menu.png	\
	figures/rb-notification-window.png	\
	figures/rb-notification-zone.png	\
	figures/rb-podcast-main.png		\
	figures/rb-statusbar.png		\
	figures/rb-toolbar.png			\
	figures/rb-toolbar-prevplaynext.png	\
	figures/rb-toolbar-repeat.png		\
	figures/rb-toolbar-shuffle.png		\
	figures/rb-volume-changer.png		\
	figures/rb-window.png			\
	figures/rb-window-small.png

HELP_LINGUAS = ca cs da de es el eu fr gl it ja oc pt pt_BR ro ru sl sv uk zh_CN
