@YELP_HELP_RULES@

HELP_ID = rhythmbox
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = \
	figures/rb-iradio-main.png		\
	figures/rb-notification-zone.png	\
	figures/rb-podcast-main.png		\
	figures/rb-toolbar-prevplaynext.png	\
	figures/rb-toolbar-repeat.png		\
	figures/rb-toolbar-shuffle.png		\
	figures/rb-volume-changer.png		\
	figures/rb-window.png

HELP_LINGUAS = ca cs da de es el eu fr gl it ja oc pt pt_BR ro ru sl sv uk zh_CN
