sources = [
  'index.docbook',
  'legal.xml'
]

media = [
  'figures/rb-iradio-main.png',
  'figures/rb-notification-zone.png',
  'figures/rb-podcast-main.png',
  'figures/rb-toolbar-prevplaynext.png',
  'figures/rb-toolbar-repeat.png',
  'figures/rb-toolbar-shuffle.png',
  'figures/rb-volume-changer.png',
  'figures/rb-window.png',
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true
)
