i18n = import('i18n')

langs = [
  'af',
  'am',
  'ar',
  'as',
  'az',
  'be',
  'be@latin',
  'bg',
  'bn_IN',
  'br',
  'bs',
  'ca',
  'ca@valencia',
  'cs',
  'cy',
  'da',
  'de',
  'dz',
  'el',
  'en_CA',
  'en_GB',
  'eo',
  'es',
  'et',
  'eu',
  'fa',
  'fi',
  'fr',
  'ga',
  'gd',
  'gl',
  'gu',
  'he',
  'hi',
  'hr',
  'hu',
  'id',
  'is',
  'it',
  'ja',
  'kk',
  'kn',
  'ko',
  'lt',
  'lv',
  'mk',
  'ml',
  'mn',
  'mr',
  'ms',
  'nb',
  'nds',
  'ne',
  'nl',
  'nn',
  'oc',
  'or',
  'pa',
  'pl',
  'ps',
  'pt',
  'pt_BR',
  'ro',
  'ru',
  'rw',
  'si',
  'sk',
  'sl',
  'sr',
  'sr@latin',
  'sv',
  'ta',
  'te',
  'th',
  'tr',
  'uk',
  'vi',
  'zh_CN',
  'zh_HK',
  'zh_TW',
]

i18n.gettext('rhythmbox', languages : langs)
